[package]
name = "b-tree"
version = "0.5.0"
authors = ["code@tinychain.net"]
edition = "2024"
description = "A persistent B+ tree using freqfs"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/haydnv/b-tree"

keywords = ["persistent", "ordered", "key", "index", "collection"]
categories = ["database", "database-implementations", "data-structures"]

[features]
all = ["logging", "stream"]
logging = ["log", "freqfs/logging"]
stream = ["collate/stream", "destream", "freqfs/stream"]

[[example]]
name = "example"
required-features = ["stream"]

[dependencies]
collate = { path = "../collate", version = "0.4" }
destream = { path = "../destream", version = "0.10.1", optional = true }
freqfs = { path = "../freqfs", version = "0.13" }
futures = "0.3"
get-size = "0.1"
log = { version = "0.4", features = ["release_max_level_info"], optional = true }
num_cpus = "1.17"
pin-project = "1.1"
safecast = "0.2"
smallvec = "1.15"
uuid = "1.23"

[dev-dependencies]
rand = "0.10"
tokio = { version = "1.51", features = ["macros"] }
